--- a/Jerry/attadence/attStyle.css
+++ b/Jerry/attadence/attStyle.css
@@ -15,6 +15,7 @@ footer {
   height: 50px;
   background: #b8b8b8;
   position: fixed;
+  z-index: 1;
   bottom: 0;
   width: 100%;
 }
@@ -200,6 +201,7 @@ hr {
   /* left: -40px; */
   top: -10px;
   width: 100%;
+  z-index: 10;
 }
 
 .expand-container ul li {
